# eventually

./: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  logging.yaml  package-lock.json  package.json  pyproject.toml
ci/eventually/: Dockerfile
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.vue  Event.vue  Main.vue  api.ts  config.scss  main.js  router.js
frontend/src/api/: EventLocation.ts  EventProgramItem.ts  EventProgramOverview.ts
frontend/src/components/: Badge.vue  Calendar.vue  Dialog.vue  EventSelector.vue  EventsList.vue  HelloWorld.vue  Progress.vue  StartupSplash.vue  Table.vue  TheMainMenu.vue
frontend/src/components/renderer/: EventType.vue  Location.vue
frontend/src/components/ui/: AutoForm.d.ts  AutoForm.vue  Badge.vue  Button.vue  Dialog.vue  FormInput.vue  Progress.vue  Table.d.ts  Table.vue
frontend/src/defs/: menuItem.ts
frontend/src/pages/: EventEditorPage.vue  EventSelectorPage.vue
frontend/src/pages/EventEditor/: CalendarPage.vue  LocationPage.vue  Program.vue  ProgramItemPage.vue  ProgramOverview.vue
frontend/src/stores/: event.ts
src/: app.py  console.py  container.py  di.py  settings.py
src/route/: __init__.py  event.py  location.py  middleware.py  program.py  programitem.py  swagger_utils.py
src/service/core/: __init__.py  entity.py  model.py  repository.py
src/service/event/: __init__.py  entity.py  repository.py  service.py
src/service/programitem/: __init__.py  entity.py  repository.py  service.py
src/utils/: __init__.py  db.py
tests/unit/: __init__.py  conftest.py  requirements.py  test_event_repository.py  test_sanity.py
